[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymnash"
version = "0.7"
authors = [
  { name="George Weinberg", email="gmweinberg@fastmail.fm" },
]
description = "Find Nash Equilibria of Multiplayer Games"
readme = "README"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gmweinberg/pymnash"
Issues = "https://github.com/gmweinberg/pymnash/issues"
~                                                                         
