[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymnash"
version = "0.8.0"
authors = [
  { name="George Weinberg", email="gmweinberg@fastmail.fm" },
]
dependencies = [
    "sympy", "numpy"
]
description = "Find Nash Equilibria of Multiplayer Games"
license = {file = "LICENSE"}
readme = {file = "README.rst", content-type="text/x-rst"}
requires-python = ">=3.8"
keywords = ["nash", "nash equilibrium", "nash equilibria", "game theory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gmweinberg/pymnash"
Issues = "https://github.com/gmweinberg/pymnash/issues"
